// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders react node 1`] = `
<div
  class="paragraph"
>
  <span>
    Hello
  </span>
</div>
`;

exports[`renders string 1`] = `
<div
  class="paragraph"
>
  Hello
</div>
`;
